# jobscraperv2

./: .gitignore  LICENSE  README.md  example-configuration.json  jobscraperv2.py  pyproject.toml  removeduplicates.py  requirements.txt
src/jobscraperv2/: __init__.py  __main__.py  playwrightTest.py
src/jobscraperv2/util/: configfile.py  terminal.py
src/jobscraperv2/websites/: careerbuilderwebsite.py  dicewebsite.py  himalayaswebsite.py  himalayaswebsiteNOTWORKING.py  himalayawebsite.py  hitmarkerwebsite.py  hitmarkerwebsiteNOTWORKING.py  indeedwebsite.py  indeedwebsiteNOTWORKING.py  jobdata.py  jobs4goodwebsite.py  linkedinwebsite.py  monsterwebsite.py  monsterwebsiteNOTWORKING.py  nowhiteboardwebsiteNOTWORKING.py  websiteinterface.py  weworkremotelywebsite.py  ziprecruiterwebsite.py
src/jobscraperv2/websites/observers/: airtableasobserver.py
websites/: dicewebsite.py  websiteinterface.py
websites/observers/: observerinterface.py  terminalasobserver.py
