
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobscraperv2"
version = "1.0.0"
description = "Scrape job websites to various observers."
readme = "README.md"
authors = [{ name = "Olin Gallet", email = "olindgallet@olingallet.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["scraper", "airtable", "automation"]
dependencies = [
"airtable-python-wrapper==0.15.3",
"beautifulsoup4==4.11.1",
"bs4==0.0.1",
"certifi==2022.9.24",
"charset-normalizer==2.1.1",
"greenlet==1.1.3",
"idna==3.4",
"playwright==1.27.1",
"plumbum==1.8.0",
"pyee==8.1.0",
"python-dotenv==1.0.0",
"requests==2.28.1",
"soupsieve==2.3.2.post1",
"typing-extensions==4.4.0",
"urllib3==1.26.12"
]

[project.scripts]
jobscraperv2 = "jobscraperv2.__main__:execute"
